<resources>
    <string name="app_name">WidgetCollection</string>
    <string name="open_weather_maps_app_id">80df67f94113c280c6fc58f2132f0660</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="monday">Mo</string>
    <string name="tuesday">Tu</string>
    <string name="wednesday">We</string>
    <string name="thursday">Th</string>
    <string name="friday">Fr</string>
    <string name="saturday">Sa</string>
    <string name="sunday">Su</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="later">Later</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="last_update">Last update:\n%s</string>
    <string name="last_update_widget">\nLast update: %s</string>
    <string name="search_title">Search for city</string>
    <string name="downloading_data">Downloading your data ...</string>
    <string name="getting_location">Getting your location ...</string>
    <string name="error_dateFormat">DATE FORMAT ERROR</string>
    <string name="setting_dateFormat">Date Format</string>
    <string name="setting_dateFormatCustom">Custom Date Format</string>
    <string name="setting_dateFormatCustom_summary">Provide the custom SimpleDateFormat string to be used</string>
    <string name="setting_lengthUnits">Length units</string>
    <string name="setting_speedUnits">Speed units</string>
    <string name="setting_tempUnits">Temperature units</string>
    <string name="setting_showTempAsInteger">Show temperature only as an integer</string>
    <string name="setting_pressureUnits">Pressure units</string>
    <string name="setting_theme">Theme</string>
    <string name="setting_auto_detect_location">Detect Location</string>
    <string name="setting_differentiateDaysByTint">Differentiate Days with Color</string>
    <string name="setting_refreshInterval">Background refresh interval</string>
    <string name="setting_unit_mps">Meters per second (m/s)</string>
    <string name="setting_unit_kph">Kilometers per hour (kph)</string>
    <string name="setting_unit_mph">Miles per hour (mph)</string>
    <string name="setting_unit_bft">Beaufort wind scale (bft)</string>
    <string name="setting_wind_direction_format">Wind direction format</string>
    <string name="settings_none">None</string>
    <string name="setting_apiKey">API key</string>
    <string name="setting_apiKey_summary">Custom API key for OpenWeatherMap queries</string>
    <string name="setting_unit_Celsuis">Celsius</string>
    <string name="setting_unit_Fahrenheit">Fahrenheit</string>
    <string name="setting_unit_Kelvin">Kelvin</string>
    <string name="setting_unit_mm">Millimeters (mm)</string>
    <string name="setting_unit_in">Inches (in)</string>
    <string name="setting_unit_hpa">hPa</string>
    <string name="setting_unit_kpa">kPa</string>
    <string name="setting_unit_mmhg">mm Hg</string>
    <string name="setting_unit_inhg">in Hg</string>
    <string name="speed_unit_mps">m/s</string>
    <string name="speed_unit_kph">kph</string>
    <string name="speed_unit_mph">mph</string>
    <string name="wind_direction_format_none">No indication</string>
    <string name="wind_direction_format_arrows">Arrows</string>
    <string name="wind_direction_format_abbreviations">Abbreviations</string>
    <string name="pressure_unit_hpa">hPa</string>
    <string name="pressure_unit_kpa">kPa</string>
    <string name="pressure_unit_mmhg">mm Hg</string>
    <string name="setting_theme_fresh">Fresh</string>
    <string name="setting_theme_classic">Classic</string>
    <string name="setting_theme_dark">Fresh Dark</string>
    <string name="setting_theme_classic_dark">Classic Dark</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="msg_err_parsing_json">Error parsing JSON.</string>
    <string name="msg_connection_problem">There is a problem with your internet connection.</string>
    <string name="msg_connection_not_available">Connection not available.</string>
    <string name="msg_city_not_found">Specified city is not found.</string>
    <string name="weather_sunny" translatable="false">&#xf00d;</string>
    <string name="weather_clear_night" translatable="false">&#xf02e;</string>
    <string name="weather_foggy" translatable="false">&#xf014;</string>
    <string name="weather_cloudy" translatable="false">&#xf013;</string>
    <string name="weather_rainy" translatable="false">&#xf019;</string>
    <string name="weather_snowy" translatable="false">&#xf01b;</string>
    <string name="weather_thunder" translatable="false">&#xf01e;</string>
    <string name="weather_drizzle" translatable="false">&#xf01c;</string>
    <string name="wind_direction_north">N</string>
    <string name="wind_direction_north_north_east">NNE</string>
    <string name="wind_direction_north_east">NE</string>
    <string name="wind_direction_east_north_east">ENE</string>
    <string name="wind_direction_east">E</string>
    <string name="wind_direction_east_south_east">ESE</string>
    <string name="wind_direction_south_east">SE</string>
    <string name="wind_direction_south_south_east">SSE</string>
    <string name="wind_direction_south">S</string>
    <string name="wind_direction_south_south_west">SSW</string>
    <string name="wind_direction_south_west">SW</string>
    <string name="wind_direction_west_south_west">WSW</string>
    <string name="wind_direction_west">W</string>
    <string name="wind_direction_west_north_west">WNW</string>
    <string name="wind_direction_north_west">NW</string>
    <string name="wind_direction_north_north_west">NNW</string>
    <string name="msg_too_many_requests">Too many requests. Please try again.</string>
    <string name="dash_clock_status">%1$s°%2$s</string>
    <string name="dash_clock_expanded_title">%1$s°%2$s - %3$s</string>
    <string name="dash_clock_expanded_body">%1$s, %2$s\nWind: %3$s %4$s\nPressure: %5$s %6$s\nHumidity: %7$s %%\n</string>
    <string name="settings_title_units">Units</string>
    <string name="settings_title_display">Display</string>
    <string name="settings_title_data">Data</string>
    <string name="setting_displayDecimalZeroes">Display decimal zeroes</string>
    <string name="settings_title_location">Location</string>
    <string name="setting_update_location_automatically">Update location in background</string>
    <string name="location_settings">Location Settings</string>
    <string name="location_settings_message">Location is not enabled. Do you wish to go to the settings menu?</string>
    <string name="location_settings_button">Settings</string>
    <string name="action_weather_map">Weather Map</string>
    <string name="rain">Rain</string>
    <string name="temperature">Temperature</string>
    <string name="action_graphs">Graphs</string>
    <string name="no_data">no data</string>
    <string name="windTitle">Wind: </string>
    <string name="windMeasure">m/s</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="time_date">Time and Date</string>
    <string name="widget_name">Battery Widget</string>
    <string name="service_description">Widget Update Service</string>
    <string name="battery_broadcast_receiver">Battery Broadcast Receiver</string>
    <string name="textBatteryInfo">Battery Info</string>
    <string name="textState">State:</string>
    <string name="textStatus">Status: </string>
    <string name="textPlug">Plug:</string>
    <string name="textLevel">Level:</string>
    <string name="textScale">Scale:</string>
    <string name="textVoltage">Voltage:</string>
    <string name="textTemperature">Temperature:</string>
    <string name="textTechnology">Technology:</string>
    <string name="textHealth">Health:</string>
    <string name="Unknown">Unknown</string>
    <string name="Empty"></string>
    <string name="batteryStatusCharging">Charging</string>
    <string name="batteryStatusChargingAC">Charging(AC)</string>
    <string name="batteryStatusChargingUSB">Charging(USB)</string>
    <string name="batteryStatusDischarging">Discharging</string>
    <string name="batteryStatusFull">Full</string>
    <string name="batteryStatusNotCharging">Not charging</string>
    <string name="batteryPlugAC">AC plugged</string>
    <string name="batteryPlugUSB">USB plugged</string>
    <string name="batteryPlugNone">Not plugged</string>
    <string name="batteryHealthDead">Dead</string>
    <string name="batteryHealthGood">Good</string>
    <string name="batteryHealthOverVoltage">Over voltage</string>
    <string name="batteryHealthOverheat">Overheat</string>
    <string name="batteryHealthUnspecifiedFailure">Unspecified failure</string>
    <string name="batteryLevelSymbol">%</string>
    <string name="batteryVoltSymbol"> mV</string>
    <string name="batteryCelsiusSymbol">\u00B0 C</string>
    <string name="batteryFahrenheitSymbol">\u00B0 F</string>
    <string name="infoViewSummaryButton">Summary</string>
    <string name="infoViewOptionsButton">Options</string>
    <string name="infoViewPreferencesButton">Preferences</string>
    <string name="infoViewHistoryButton">History</string>
    <string name="settingsManager">Battery Widget Settings</string>
    <string name="historyViewManager">Battery History Details</string>
    <string name="aboutView">About this app</string>
    <string name="availableData">Charge History</string>
    <string name="notAvailableDataYet">No history data available</string>
    <string name="packageVersion">Version 1.4.1</string>
    <string name="authorInfo">        \nDeveloper: Erkan Molla</string>
    <string name="aboutThisApp">        \nThis app is placed on your home screen so you can quickly check your battery level.
        \nIt is an open source project and licensed with Apache License 2.0.
        \nFeel free to contribute to the development of the project on GitHub.</string>
    <string name="donation">        \nIf you wish to support the development please consider making a donation with paypal. Thank You!</string>
    <string name="publicThanks">        \nI would like to send my public thanks to \'bilentkal@gmail.com\' for the battery icons.
        \nContact him if you are developer.</string>
    <string name="githubButtonName">Go to GitHub</string>
    <string name="paypalButtonName">Go to PayPal</string>
    <string name="title_activity_widget">WidgetActivity</string>
    <string name="battery_title">Battery</string>
    <string name="default_city">Athens</string>
    <string name="default_hour" />
    <string name="default_date" />
    <string name="back">Back</string>
    <string name="default_temp">0 °C</string>
    <string name="weather_title">Weather</string>
    <string name="default_wind">Wind: 0 m/s</string>
    <string name="comma">,</string>
    <string name="default_s_temp">0°</string>
    <string name="s_monday">Mo</string>
    <string name="day">DAY</string>
    <string name="week">WEEK</string>
    <string name="now">NOW</string>
    <string name="b_weather">WEATHER</string>
    <string name="energy_mode">energy mode</string>
    <string name="close">close</string>
    <string name="calendar">calendar</string>
    <string name="forecast">forecast</string>
    <string name="dedault_humidity">Humidity: 0 %</string>
    <string name="energy_mode_off">energy mode off</string>
    <string name="energy_mode_on">Battery saver is On</string>
    <string name="off">off</string>
    <string name="on">on</string>
</resources>