<?xml version="1.0" encoding="utf-8"?>



<!--<android.support.v4.calendar_widget.DrawerLayout-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--android:id="@+id/drawer_layout"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/extendedRoot"
    android:background="@drawable/widget_back"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/widgetTitleEx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/b_weather"
            android:textColor="@color/bb_inActiveBottomBarItemColor"
            android:textSize="24sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_weight="1"

                >
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/state_now"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/now"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="24sp" />
                </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_weight="1"

                >
                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/state_week"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/week"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"

                >
                <TextView
                    android:id="@+id/state_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/day"
                    android:textAlignment="center"

                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:gravity="right" />
                </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:layout_marginLeft="20dp"
            android:gravity="left">



            <TextView
                android:id="@+id/widgetExTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_temp"
                android:textColor="@android:color/black"
                android:textSize="35sp"
                />
            <!--android:src="@drawable/ic_refresh_white_24dp"-->
            <ImageView
                android:id="@+id/widgetExIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/k48_clouds"
                />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:baselineAligned="false"
        android:layout_marginLeft="20dp"
        android:gravity="left">

        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/widgetExDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/widgetHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/dedault_humidity"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <!--<TextView-->
            <!--android:id="@+id/precipitation"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="2dp"-->
            <!--android:text="Chance of rain/snow: 0 %"-->
            <!--android:textColor="@android:color/black"-->
            <!--android:textSize="16sp" />-->

        <TextView
            android:id="@+id/widgetExWind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/default_wind"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:gravity="right"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        >

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textAlignment="center"
            android:padding="10dp"

            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:gravity="right" />
        </LinearLayout>
</LinearLayout>
    </LinearLayout>


</RelativeLayout>

    <!--<android.support.design.calendar_widget.NavigationView-->
        <!--android:id="@+id/nvView"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_gravity="start"-->
        <!--android:background="@android:color/black"-->
        <!--app:menu="@menu/view_drawer" />-->
<!--</android.support.v4.calendar_widget.DrawerLayout>-->
