<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/widget_back"
    android:gravity="left"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/time_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="true"
        android:weightSum="1">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="54dp"

            android:background="@color/common_grey300"
            >

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"

                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/calendar_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/time_date"
                    android:textSize="20dp"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:drawableLeft="@drawable/ic_widgeticons_timedate"
                    android:drawablePadding="12dp"
                   />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:gravity="right"
            android:orientation="vertical"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="vertical"
                >

                <TextView

                    android:id="@+id/appwidget_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="12dp"
                    android:contentDescription="@string/appwidget_text"
                    android:text="@string/default_hour"
                    android:textColor="@android:color/black"
                    android:textSize="36dp"
                    android:fontFamily="sans-serif-medium"
                    />

                <TextView
                    android:id="@+id/date"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/appwidget_text"
                    android:layout_marginRight="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/default_date"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"
                    android:textStyle="normal"
                    android:fontFamily="sans-serif-medium"/>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#1E000000"
        />

    <LinearLayout
        android:id="@+id/weatherRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="10000dp"
        android:maxHeight="130dp"
        android:orientation="vertical"
        android:weightSum="1">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/common_grey300">

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="54dp"
                android:layout_alignParentLeft="true"

                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/weatherHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_title"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:layout_margin="16dp"
                    android:drawableLeft="@drawable/ic_widgeticons_weather"
                    android:drawablePadding="12dp"
                    android:fontFamily="sans-serif-medium"
                    />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:baselineAligned="false"
            android:paddingLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_city"
                android:layout_marginTop="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                android:fontFamily="sans-serif-medium"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"

                android:weightSum="1">


                <TextView
                    android:id="@+id/widgetTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_temp"
                    android:layout_margin="12dp"
                    android:textColor="@android:color/black"
                    android:textSize="34dp"
                    android:fontFamily="sans-serif-medium"/>

                <ImageView
                    android:id="@+id/widgetIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"

                    android:src="@drawable/ic_weathericonsclouds"
                    android:layout_weight="0.09" />
                <!--android:src="@drawable/ic_refresh_white_24dp"-->

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/widgetDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_data"
                    android:layout_marginBottom="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:textColor="@android:color/black"
                    android:maxLines="2"
                    android:textSize="20dp"
                    android:fontFamily="sans-serif-medium"/>



            </LinearLayout>
        </LinearLayout>


    </LinearLayout>



</LinearLayout>
