<?xml version="1.0" encoding="utf-8"?>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@id/weatherRootCurrent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

       >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:baselineAligned="false"
        android:paddingLeft="10dp">



        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_city"
            android:layout_marginTop="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:fontFamily="sans-serif-medium"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"

            android:weightSum="1">


            <TextView
                android:id="@+id/widgetTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_temp"
                android:layout_margin="12dp"
                android:textColor="@android:color/black"
                android:textSize="34dp"
                android:fontFamily="sans-serif-medium"/>

            <ImageView
                android:id="@+id/widgetIcon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"

                android:src="@drawable/ic_weathericonsclouds"
                android:layout_weight="0.09" />
            <!--android:src="@drawable/ic_refresh_white_24dp"-->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/widgetDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:fontFamily="sans-serif-medium"
                android:layout_gravity="fill"
                android:maxLines="2"
                android:text="@string/no_data"
                android:textColor="@android:color/black"
                android:textSize="20dp" />


        </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
